--- a/src/http-operator/config/crd/bases/http.example.com_httpservers.yaml
+++ b/src/http-operator/config/crd/bases/http.example.com_httpservers.yaml
@@ -43,6 +43,9 @@ spec:
                   format: int32
                   type: integer
                 type: array
+              replicas:
+                format: int32
+                type: integer
             required:
             - hosts
             - ports
